<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_cost_title"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:text="@string/cost_title"
        app:layout_constraintEnd_toStartOf="@id/tv_delivery_charge_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_delivery_charge_price"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:gravity="end"
        android:text="@string/order_cost"
        app:layout_constraintBottom_toBottomOf="@id/tv_cost_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_cost_title"
        app:layout_constraintTop_toTopOf="@id/tv_cost_title" />

    <TextView
        android:id="@+id/tv_delivery_cost_title"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0.5"
        android:text="@string/delivery_title"
        app:layout_constraintEnd_toStartOf="@id/tv_delivery_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cost_title" />

    <TextView
        android:id="@+id/tv_delivery_cost"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:gravity="end"
        android:text="@string/delivery_cost"
        app:layout_constraintBottom_toBottomOf="@id/tv_delivery_cost_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_delivery_cost_title"
        app:layout_constraintTop_toTopOf="@id/tv_delivery_cost_title" />

    <TextView
        android:id="@+id/tv_discount_title"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0.5"
        android:text="@string/discount_title"
        app:layout_constraintEnd_toStartOf="@id/tv_discount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_delivery_cost_title" />

    <TextView
        android:id="@+id/tv_discount"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:gravity="end"
        android:text="@string/discount_cost"
        app:layout_constraintBottom_toBottomOf="@id/tv_discount_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_discount_title"
        app:layout_constraintTop_toTopOf="@id/tv_discount_title" />

    <TextView
        android:id="@+id/tv_result_title"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/result_title"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@id/tv_result_sum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_discount_title" />

    <TextView
        android:id="@+id/tv_result_sum"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="end"
        android:text="@string/result_sum"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/tv_result_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_result_title"
        app:layout_constraintTop_toTopOf="@id/tv_result_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
