<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_payment_type_title"
        style="@style/PaymentTextAppearance.Medium.Gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/payment_type_title"
        app:layout_constraintEnd_toStartOf="@id/iv_select_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_payment_type"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:alpha="0.5"
        android:text="@string/payment_type"
        app:layout_constraintBottom_toTopOf="@id/divider_payment_type"
        app:layout_constraintEnd_toStartOf="@id/iv_select_type"
        app:layout_constraintStart_toStartOf="@id/tv_payment_type_title"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_type_title" />

    <ImageView
        android:id="@+id/iv_select_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_keyboard_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/tv_payment_type"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_payment_type_title" />

    <View
        android:id="@+id/divider_payment_type"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:alpha="0.1"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_type" />

    <TextView
        android:id="@+id/tv_delivery_title"
        style="@style/PaymentTextAppearance.Medium.Gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/delivery_title"
        app:layout_constraintEnd_toStartOf="@id/iv_select_delivery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_payment_type" />

    <TextView
        android:id="@+id/tv_delivery"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:alpha="0.5"
        android:text="@string/delivery"
        app:layout_constraintBottom_toTopOf="@id/divider_delivery"
        app:layout_constraintEnd_toStartOf="@id/iv_select_delivery"
        app:layout_constraintStart_toStartOf="@id/tv_delivery_title"
        app:layout_constraintTop_toBottomOf="@id/tv_delivery_title" />

    <ImageView
        android:id="@+id/iv_select_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_keyboard_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/tv_delivery"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_delivery_title" />

    <View
        android:id="@+id/divider_delivery"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:alpha="0.1"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_delivery" />

    <TextView
        android:id="@+id/tv_delivery_city_title"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alpha="0.5"
        android:text="@string/delivery_city_title"
        app:layout_constraintEnd_toStartOf="@id/tv_delivery_city_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_delivery" />

    <TextView
        android:id="@+id/tv_delivery_city_price"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:gravity="end"
        android:text="@string/delivery_city_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_delivery_city_title"
        app:layout_constraintTop_toTopOf="@id/tv_delivery_city_title" />

    <TextView
        android:id="@+id/tv_delivery_charge_title"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0.5"
        android:text="@string/delivery_charge_title"
        app:layout_constraintEnd_toStartOf="@id/tv_delivery_charge_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_delivery_city_title" />

    <TextView
        android:id="@+id/tv_delivery_charge_price"
        style="@style/PaymentTextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:gravity="end"
        android:text="@string/delivery_charge_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_delivery_charge_title"
        app:layout_constraintTop_toTopOf="@id/tv_delivery_charge_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
