<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_total_title"
        style="@style/PaymentTextAppearance.Medium.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_sum_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btn_pay"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_pay" />

    <TextView
        android:id="@+id/tv_total_sum"
        style="@style/PaymentTextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/total_sum"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_pay"
        app:layout_constraintEnd_toStartOf="@id/btn_pay"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/tv_total_title"
        app:layout_constraintTop_toBottomOf="@id/tv_total_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorButton"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/button_pay"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
